syntax = "proto3";

package protocol;

service PersonService {
    rpc ListPerson(RequestType) returns (stream Person) {}
    rpc AddPerson(Person) returns (ResponseType) {}
}

message ResponseType {
}

message RequestType {
}

message Person {
    string name = 1;
    int32 age = 2;
}

